2008-11-24  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Updated the code with regard to bug #463961
	* Bumped version number to 0.9.1pre5
	
2008-11-22  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added file src/patches/457854.diff
	to backport this particular bugfix
	* Added the calendar-fr.jar source files
	in order to fix typos in the French translation
	* Added src/calendar/base/content/widgets/minimonth.xml
	so that we update the view wrt the selected day

2008-11-20  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/base/src/calTransactionManager.js
	We correctly handle the SEQUENCE increase upon
	event modification

2008-11-18  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * src/calendar/base/content/sun-calendar-event-dialog.js
	 src/patches/464444.diff
	 new files in order to fix the issue (bug #464444) where
	 the last attendee wouldn't be notified when he was
	 removed from the list of invited attendees
	* Bumped the version number to 0.9.0pre3

2008-11-16  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Improved the speed of the SAX handler in
	calDavCalendar.js b avoiding calls to ensurePath()

2008-11-14  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added a Linux/64-bit Lightning build
	* Changed the version number to 0.9.1pre2
	* Fixed bug #463960

2008-11-12  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added src/patches/454543.diff for bug #454543
	  Included the fix in the source code and
	  slightly modified it (replaced let = with var=)

2008-11-11  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Fixed bug #464344
	* Added binaries/lightning/saxparser.xpt to the
	  Lightning/win32 build in order to get a working
	  SAX parser on this platform
	* Changed the version number to 0.9.1pre1

2008-11-10  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Modified calDavCalendar.js
	- added a fast etag parser
	- re-implemented getInvitedAttendee so it takes
	  into account all identities